Post-final update: Fix images not showing up well and changed --primary to a brighter color

--- a/shared/css/utils.css
+++ b/shared/css/utils.css
@@ -6,7 +6,7 @@
 }
 :root {
     --bg-light: #F4FFF9;
-    --primary: #00E06E;
+    --primary: #26ce79;
     --text-black: #21272A;
     --f-primary: "Roboto"
 }
